fix markdown image that not showing up in thread
Changelog: fixed

--- a/webapp/channels/src/components/markdown_image_expand/markdown_image_expand.scss
+++ b/webapp/channels/src/components/markdown_image_expand/markdown_image_expand.scss
@@ -22,7 +22,7 @@
     color: rgba(var(--center-channel-color-rgb), 0.64);
     font-size: 18px;
     line-height: 21px;
-
+    z-index: 1;
     .icon {
         width: 18px;
         height: 18px;
